final version v.1.2